--- a/style.css
+++ b/style.css
@@ -527,7 +527,7 @@ footer .copyright {
     top: 0;
     right: -300px;
     height: 100vh;
-    width: 300px;
+    width: 300px; /* adjusts the slider */
     background-color: white;
     box-shadow: 0 10px 10px grey;
     padding: 80px 0 0 10px;
@@ -539,7 +539,7 @@ footer .copyright {
   }
 
   #navbar.active {
-    right: 2px;
+    right: 1px;
   }
 
   #mobile {
