--- a/style.css
+++ b/style.css
@@ -521,7 +521,7 @@ footer .copyright {
   #navbar { /* creates a nav bar to go to the side */
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-start; /* aligns the elements to the left and top of container */
     justify-content: flex-start;
     position: fixed;
     top: 0;
